deploy/aws/ingress/ingress-alb.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: opengovernance
  name: opengovernance-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:061051223057:certificate/4c78d0cc-b0fb-4212-a566-67c35d1901c7
spec:
  ingressClassName: alb
  rules:
    - host: demo.opengovernance.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-proxy
              port:
                number: 80
